fix: correct dependency resolution for dependents that rely on more than one dependency from the same provider

--- a/Chickensoft.AutoInject.Tests/Chickensoft.AutoInject.Tests.csproj
+++ b/Chickensoft.AutoInject.Tests/Chickensoft.AutoInject.Tests.csproj
@@ -9,15 +9,14 @@
     <!-- godotengine/godot/issues/42271#issuecomment-751423827 -->
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <!-- To show generated files -->
-
     <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
     <CompilerGeneratedFilesOutputPath>.generated</CompilerGeneratedFilesOutputPath>
-
     <DebugType>full</DebugType>
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Chickensoft.GoDotTest" Version="1.1.7" />
+    <PackageReference Include="GodotTestDriver" Version="2.1.0" />
     <!-- Bring your own assertion library for tests! -->
     <!-- We're using Shouldly for this example, but you can use anything. -->
     <PackageReference Include="Shouldly" Version="4.1.0" />
