refactor: rework project, use new introspection generator, combine mixins and share infrastructure

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,9 @@
     "editor.formatOnSave": true,
     "editor.formatOnType": false
   },
+  // Required to keep the C# language server from getting confused about which
+  // solution to open.
+  "dotnet.defaultSolution": "Chickensoft.AutoInject.sln",
   "csharp.semanticHighlighting.enabled": true,
   "editor.semanticHighlighting.enabled": true,
   // C# doc comment colorization gets lost with semantic highlighting, but we
