--- a/Chickensoft.AutoInject.Tests/Chickensoft.AutoInject.Tests.csproj
+++ b/Chickensoft.AutoInject.Tests/Chickensoft.AutoInject.Tests.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <EnableDynamicLoading>true</EnableDynamicLoading>
-    <LangVersion>10.0</LangVersion>
+    <LangVersion>preview</LangVersion>
     <Nullable>enable</Nullable>
     <RootNamespace>Chickensoft.AutoInject.Tests</RootNamespace>
     <!-- Required for some nuget packages to work -->
@@ -20,18 +20,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Chickensoft.GoDotTest" Version="1.4.0" />
+    <PackageReference Include="Moq" Version="4.20.69" />
+    <PackageReference Include="Shouldly" Version="4.2.1" />
+
+    <PackageReference Include="Chickensoft.GoDotTest" Version="1.5.3" />
     <PackageReference Include="Chickensoft.GodotTestDriver" Version="3.0.0" />
-    <!-- Bring your own assertion library for tests! -->
-    <!-- We're using Shouldly for this example, but you can use anything. -->
-    <PackageReference Include="Shouldly" Version="4.1.0" />
-    <!-- LightMock is a mocking library that can run without reflection. -->
-    <PackageReference Include="LightMock.Generator" Version="1.2.2" />
-    <!-- LightMoq is a Chickensoft package which makes it more like Moq. -->
-    <PackageReference Include="LightMoq" Version="0.1.0" />
-    <PackageReference Include="Chickensoft.SuperNodes" Version="1.8.0" PrivateAssets="all" OutputItemType="analyzer" />
-    <PackageReference Include="Chickensoft.SuperNodes.Types" Version="1.8.0" />
-    <!-- Include project to test. -->
-    <!-- <PackageReference Include="Chickensoft.AutoInject" Version="1.0.0" PrivateAssets="all" /> -->
+    <PackageReference Include="Chickensoft.GodotNodeInterfaces" Version="2.2.4" />
+    <PackageReference Include="Chickensoft.Introspection" Version="1.2.0" />
+    <PackageReference Include="Chickensoft.Introspection.Generator" Version="1.2.0" PrivateAssets="all" OutputItemType="analyzer" />
   </ItemGroup>
 </Project>
