--- a/nuget.config
+++ b/nuget.config
@@ -6,6 +6,6 @@
     <!-- Default nuget feed -->
     <add key="nuget" value="https://api.nuget.org/v3/index.json" />
     <!-- Source only package -->
-    <add key="Local Packages" value="./nupkg" />
+    <add key="Local Packages" value="Chickensoft.AutoInject/nupkg" />
   </packageSources>
 </configuration>
