--- a/renovate.json
+++ b/renovate.json
@@ -1,30 +1,4 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended",
-    ":semanticCommits"
-  ],
-  "prHourlyLimit": 2,
-  "packageRules": [
-    {
-      "groupName": "all dependencies",
-      "groupSlug": "all-deps",
-      "automerge": true,
-      "matchPackageNames": [
-        "*"
-      ]
-    },
-    {
-      "matchPackageNames": [
-        "GodotSharp{/,}**",
-        "Godot.NET.Sdk{/,}**"
-      ]
-    },
-    {
-      "matchPackageNames": [
-        "Chickensoft{/,}**"
-      ],
-      "allowedVersions": "/^(\\d+\\.\\d+\\.\\d+)(-godot(\\d+\\.)+\\d+(-.*)?)?$/"
-    }
-  ]
+  "extends": ["github>chickensoft-games/renovate:godot"]
 }
