chore: add auto-release for renovate updates
Added auto_release workflow and updated release workflow to only run
on the main Chickensoft repository. Enables auto-releasing new versions
when dependencies update.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,6 +16,7 @@ jobs:
   publish:
     name: 📦 Release
     runs-on: ubuntu-latest
+    if: github.repository == 'chickensoft-games/AutoInject'
     steps:
       - name: 🧾 Checkout
         uses: actions/checkout@v4
