--- a/Chickensoft.AutoInject.Analyzers/Chickensoft.AutoInject.Analyzers.csproj
+++ b/Chickensoft.AutoInject.Analyzers/Chickensoft.AutoInject.Analyzers.csproj
@@ -15,9 +15,9 @@
     <DebugType>portable</DebugType>
 
     <Title>AutoInject Analyzers</Title>
-    <Version>1.0.0</Version>
+    <Version>0.0.0-devbuild</Version>
     <Description>AutoInject analyzers.</Description>
-    <Copyright>© 2025 Chickensoft Games</Copyright>
+    <Copyright>© 2025 Chickensoft</Copyright>
     <Authors>Chickensoft</Authors>
     <Company>Chickensoft</Company>
 
