--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -64,3 +64,7 @@ jobs:
       - name: 🧪 Run Tests
         working-directory: Chickensoft.AutoInject.Tests
         run: godot --headless --run-tests --quit-on-finish
+
+      - name: 🧪 Run Analyzer Tests
+        working-directory: Chickensoft.AutoInject.Analyzers.Tests
+        run: dotnet test
