test: improve analyzer test setup
* Updated the code for adding assemblies to tests: Now pulls from
  assemblies in the test project itself, so we don't have to hit NuGet
  every run to ensure we have up-to-date versions
* Modified the code-fix verifier to provide the necessary assemblies
* Switched the existing analyzer test to a code-fix test, as Roslyn
  docs recommend testing analyzer and code-fix together wherever
  possible.
* Created a sample test for the this.Provide() code fix: This relies
  more heavily on AutoInject and Introspection, but it's nontrivial to
  obtain Introspection sourcegen during the test. Instead, the test code
  is written to fake certain things that would otherwise rely on the
  source generator.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -53,5 +53,26 @@
         "clear": false
       }
     },
+    {
+      "label": "test-analyzers",
+      "group": "test",
+      "command": "dotnet",
+      "type": "shell",
+      "options": {
+        "cwd": "${workspaceFolder}/Chickensoft.AutoInject.Analyzers.Tests",
+      },
+      "args": [
+        "test"
+      ],
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "focus": false,
+        "panel": "shared",
+        "showReuseMessage": true,
+        "clear": false
+      },
+      "problemMatcher": "$msCompile"
+    },
   ]
 }
