--- a/Chickensoft.AutoInject.Analyzers.PerformanceTests/Chickensoft.AutoInject.Analyzers.PerformanceTests.csproj
+++ b/Chickensoft.AutoInject.Analyzers.PerformanceTests/Chickensoft.AutoInject.Analyzers.PerformanceTests.csproj
@@ -5,6 +5,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <WarningAsError>NU1605</WarningAsError>
+    <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -20,7 +22,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" Version="0.15.2" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.11.0" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.11.0" />
+    <!-- should not be upgraded; we need CodeAnalysis v4.11 -->
+    <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
   </ItemGroup>
 
   <ItemGroup>
