--- a/.editorconfig
+++ b/.editorconfig
@@ -415,6 +415,8 @@ dotnet_naming_symbols.unspecified.applicable_accessibilities = *
 # Chickensoft Rule Overrides
 ##########################################
 
+# Leave me alone about primary constructors.
+dotnet_diagnostic.IDE0290.severity = none
 # Allow using keywords as names
 # dotnet_diagnostic.CA1716.severity = none
 # Don't require culture info for ToString()
