--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,5 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["github>chickensoft-games/renovate:godot"]
+  "extends": ["github>chickensoft-games/renovate:godot"],
+  "ignoreDeps": ["BenchmarkDotNet"]
 }
