test: notify, provide analyzers performance tests

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -91,7 +91,9 @@
         "--",
         "--memory",
         "--filter",
-        "'*'"
+        "'*'",
+        "--exporters",
+        "html",
       ],
       "presentation": {
         "echo": true,
