test: add notification-fix performance test

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -90,8 +90,8 @@
         "Chickensoft.AutoInject.Analyzers.PerformanceTests.csproj",
         "--",
         "--memory",
-        "--filter",
-        "'*'",
+        // "--filter",
+        // "'*'",
         "--exporters",
         "html",
       ],
