test: unified benchmark report
Consolidated all benchmark reports into a single table for easy
reference, and removed the namespace column to save space.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -90,6 +90,9 @@
         "Chickensoft.AutoInject.Analyzers.PerformanceTests.csproj",
         "--",
         "--memory",
+        "--join",
+        "--hide",
+        "Namespace",
       ],
       "presentation": {
         "echo": true,
