--- a/Chickensoft.AutoInject.Analyzers.PerformanceTests/Chickensoft.AutoInject.Analyzers.PerformanceTests.csproj
+++ b/Chickensoft.AutoInject.Analyzers.PerformanceTests/Chickensoft.AutoInject.Analyzers.PerformanceTests.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>preview</LangVersion>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <WarningAsError>NU1605</WarningAsError>
@@ -22,14 +23,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.11.0" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.11.0" />
-    <!-- should not be upgraded; we need CodeAnalysis v4.11 -->
-    <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.14.0" />
+    <PackageReference Include="BenchmarkDotNet" Version="0.15.2" />
+    <PackageReference Include="Nullable" Version="1.3.1">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../Chickensoft.AutoInject.Analyzers/Chickensoft.AutoInject.Analyzers.csproj"/>
+    <ProjectReference Include="../Chickensoft.AutoInject.Analyzers/Chickensoft.AutoInject.Analyzers.csproj" />
   </ItemGroup>
 
 </Project>
