--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,4 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["github>chickensoft-games/renovate:godot"],
-  "ignoreDeps": ["BenchmarkDotNet"]
+  "extends": ["github>chickensoft-games/renovate:godot"]
 }
